added typing highlight

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title></title>
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/index.js"></script>
 </head>
 <body>
 	<div>
@@ -19,7 +21,7 @@
 		<p id="time" class="left">1.0s</p>
 		<p id="speed" class="center">10wpm</p>
 		<p id="fastestTime" class="right">20s</p>
-		<p id="typeHere">abcdefghijklmnopqrstuvwxyz</p>
+		<p id="typeHere"><span id="typed"></span>abcdefghijklmnopqrstuvwxyz</p>
 		<p id="reset">Reset</p>
 	</div>
 </body>
