--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<p class="left">Time</p>
 		<p class="center">Speed (WPM)</p>
 		<p class="right">Fastest Time</p>
-		<p id="time" class="left">1.0s</p>
+		<p id="time" class="left">0.0</p>
 		<p id="speed" class="center">10wpm</p>
 		<p id="fastestTime" class="right">20s</p>
 		<p id="typeHere"><span id="typed"></span>abcdefghijklmnopqrstuvwxyz</p>
