added backspace and red

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
 		<p id="time" class="left">0.0</p>
 		<p id="speed" class="center">0</p>
 		<p id="fastestTime" class="right">20s</p>
-		<p id="typeHere"><span id="typed"></span>abcdefghijklmnopqrstuvwxyz</p>
+		<!-- <p id="typeHere"><span id="typed"></span><span id="typedWrong"></span>abcdefghijklmnopqrstuvwxyz</p> -->
+		<p id="typeHere">
+			<span id="a">a</span><span id="b">b</span><span id="c">c</span><span id="d">d</span><span id="e">e</span><span id="f">f</span><span id="g">g</span><span id="h">h</span><span id="i">i</span><span id="j">j</span><span id="k">k</span><span id="l">l</span><span id="m">m</span><span id="n">n</span><span id="o">o</span><span id="p">p</span><span id="q">q</span><span id="r">r</span><span id="s">s</span><span id="t">t</span><span id="u">u</span><span id="v">v</span><span id="w">w</span><span id="x">x</span><span id="y">y</span><span id="z">z</span>
+		</p>
 		<p id="reset">Reset</p>
 	</div>
+
 	<div id="cookies">
 		<p id="cookietext">We use cookies to save your high score.<br>By clicking continue, you agree to this usage.</p>
-		<a href="javascript:hideCookies()"><p id="continue" href="thing">Continue</p></a>
+		<a href="javascript:hideCookies()"><p id="continue" href="">Continue</p></a>
 	</div>
+
 </body>
 </html>
