--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Type A To Z</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -21,12 +21,12 @@
 		<p id="time" class="left">0.0</p>
 		<p id="speed" class="center">0</p>
 		<p id="fastestTime" class="right">20s</p>
-		<!-- <p id="typeHere"><span id="typed"></span><span id="typedWrong"></span>abcdefghijklmnopqrstuvwxyz</p> -->
 		<p id="typeHere">
 			<span id="a">a</span><span id="b">b</span><span id="c">c</span><span id="d">d</span><span id="e">e</span><span id="f">f</span><span id="g">g</span><span id="h">h</span><span id="i">i</span><span id="j">j</span><span id="k">k</span><span id="l">l</span><span id="m">m</span><span id="n">n</span><span id="o">o</span><span id="p">p</span><span id="q">q</span><span id="r">r</span><span id="s">s</span><span id="t">t</span><span id="u">u</span><span id="v">v</span><span id="w">w</span><span id="x">x</span><span id="y">y</span><span id="z">z</span>
 		</p>
 		<p id="reset">Reset</p>
 	</div>
+	<a href="help"><p id="help">Instructions here</p></a>
 
 	<div id="cookies">
 		<p id="cookietext">We use cookies to save your high score.<br>By clicking continue, you agree to this usage.</p>
