added back button

--- a/help/index.html
+++ b/help/index.html
@@ -18,6 +18,7 @@
         <p id="click">2. Click on any letter to start on that letter</p>
         <p id="shift">3. Alternatively, type "Shift" + "any letter" to start on that key</p>
       </div>
+      <a href="../"><p id="back">Back</p></a>
     </div>
   </body>
 </html>
