--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p id="typeHere">
         <span id="a">a</span><span id="b">b</span><span id="c">c</span><span id="d">d</span><span id="e">e</span><span id="f">f</span><span id="g">g</span><span id="h">h</span><span id="i">i</span><span id="j">j</span><span id="k">k</span><span id="l">l</span><span id="m">m</span><span id="n">n</span><span id="o">o</span><span id="p">p</span><span id="q">q</span><span id="r">r</span><span id="s">s</span><span id="t">t</span><span id="u">u</span><span id="v">v</span><span id="w">w</span><span id="x">x</span><span id="y">y</span><span id="z">z</span>
       </p>
-      <p id="reset">Reset</p>
+      <a href="#"><p id="reset">Reset</p></a>
     </div>
     <a href="help"><p id="help">Instructions here</p></a>
 
