--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p id="speed" class="center">0</p>
       <p id="fastestTime" class="right">20s</p>
       <p id="typeHere">
-        <span id="a">q</span><span id="b">w</span><span id="c">e</span><span id="d">r</span><span id="e">t</span><span id="f">y</span><span id="g">u</span><span id="h">i</span><span id="i">o</span><span id="j">p</span><span id="k">a</span><span id="l">s</span><span id="m">d</span><span id="n">f</span><span id="o">g</span><span id="p">h</span><span id="q">j</span><span id="r">k</span><span id="s">l</span><span id="t">z</span><span id="u">x</span><span id="v">c</span><span id="w">v</span><span id="x">b</span><span id="y">n</span><span id="z">m</span>
+        <span id="q">q</span><span id="w">w</span><span id="e">e</span><span id="r">r</span><span id="t">t</span><span id="y">y</span><span id="u">u</span><span id="i">i</span><span id="o">o</span><span id="p">p</span><span id="a">a</span><span id="s">s</span><span id="d">d</span><span id="f">f</span><span id="g">g</span><span id="h">h</span><span id="j">j</span><span id="k">k</span><span id="l">l</span><span id="z">z</span><span id="x">x</span><span id="c">c</span><span id="v">v</span><span id="b">b</span><span id="n">n</span><span id="m">m</span>
       </p>
       <p id="reset">Reset</p>
     </div>
